# kryptoxin

./: .gitignore  404.html  MANIFEST.in  Makefile  README.md  VERSION  encrypted.txt  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docs-deploy.yml  python-unittest.yml
contrib/: index.html
csharp/: index.html
disclaimer/: index.html
docs/: contrib.md  csharp.md  disclaimer.md  environment.yaml  getting-started.md  index.md  powershell.md  reference.md  requirements.txt  support.md  usages.md
getting-started/: index.html
kryptoxin/: __init__.py  __main__.py  __version__.py
kryptoxin/ciphers/: __init__.py  aes.py  base64.py
kryptoxin/core/: __init__.py  cli.py  constants.py  conv.py  log.py  toxin.py
kryptoxin/crypto/: __init__.py  aes.py  base64.py  caesar.py  pbkdf2.py  random.py
kryptoxin/output/: __init__.py  csharp.py  powershell.py  unformatted.py  vba.py
kryptoxin/templates/csharp/actions/: custom.jinja  load-dll.jinja  load-library.jinja  print.jinja
kryptoxin/templates/csharp/decrypt/: aes-dotnet.jinja
kryptoxin/templates/csharp/transform/: hexstr2bytearray.jinja
kryptoxin/templates/powershell/actions/: custom.jinja  decrypt-only.jinja  load-asm.jinja  print.jinja
kryptoxin/templates/powershell/decode/: base64.jinja
license/: index.html
powershell/: index.html
reference/: index.html
search/: search_index.json
support/: index.html
templates/csharp/transform/: hexstr2bytearray.jinja
templates/powershell/actions/: decrypt-only.jinja  print.jinja
templates/powershell/decode/: base64.jinja
templates/powershell/decrypt/: aes-dotnet.jinja  aes-system.jinja
tests/: test_basic.py  test_cli.py
usages/: index.html
(+7 files in other folders)
