[metadata]
name = kryptoxin
version = attr: kryptoxin.__version__
author = Nicolas Chabbey
author_email = eprom@toor.si
url = https://github.com/e3prom/kryptoxin
description = A security-oriented payload encryption tool written in Python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = security, encryption
license = GNU Affero General Public License v3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Topic :: Security
    Topic :: Security :: Cryptography
    Intended Audience :: End Users/Desktop

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
   pycryptodome
   click
   Jinja2

[options.package_data]
* = *.yml, *.rst, *.md

[options.packages.find]
exclude =
    tests*
    docs*

[flake8]
select = E